--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "html-react-parser": "^1.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-head": "^3.4.0",
+    "react-icons": "^4.3.1",
+    "react-id-generator": "^3.0.2",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-masonry-css": "^1.0.16",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
