--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/styled-components": "^5.1.19",
     "html-react-parser": "^1.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -14,8 +21,10 @@
     "react-id-generator": "^3.0.2",
     "react-lazy-load-image-component": "^1.5.1",
     "react-masonry-css": "^1.0.16",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
+    "typescript": "^4.5.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
